---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 2024-10-21
  Info:
    - Added bypass for admins to change teams
    - Added command /remove to remove a player from a team
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: 2024-10-21
  Info:
    - Added commands /chain and /unchain player to restrict them from changing teams
    - Added command /rename to rename a team
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2024-10-20
  Info:
    - Initial release