@@ -3,6 +3,7 @@ Version: 2.0.8
 Date: 2024-10-21
   Info:
     - Added bypass for admins to change teams
+    - Added command /switch-team to assign a player to that team
     - Added command /remove to remove a player from a team
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.7
